Revert "Merge request licence souboru a master branche"

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                 <li><a data-options="{ "easing": "easeInQuad" }" href="#kdo-jsem">Kdo jsem?</a></li>
                 <li><a data-options="{ "easing": "easeInQuad" }" href="#projekty">Projekty</a></li>
                 <li><a data-options="{ "easing": "easeInQuad" }" href="#kontakt">Sociální sítě</a></li>
-                <li class="right"><a href="https://github.com/Liturkey/MainWebsite">GitHub</a></li>
-                <li class="right">v0.1.2b pub</li>
+                <li class="right"><a href="#">GitHub</a></li>
+                <li class="right">v0.1.0b pub</li>
                 <ul class="social-icons icon-flat list-unstyled list-inline center"> 
                     <li><a href="https://facebook.com/Liturkey"><i class="fa fa-facebook"></i></a></li>
                     <li><a href="http://open.spotify.com/user/lukaspanek5"><i class="fa fa-spotify"></i></a></li>
@@ -174,7 +174,7 @@
                         <li><a href="https://indian-tv.cz">Indian</a></li>
                         <li><a href="https://craftmania.cz">CraftMania</a></li>
                         <li><a href="https://pslib.cz">SPŠSE a VOŠ Liberec</a></li>
-                        <li><a href="https://github.com/Liturkey/MainWebsite">Zdrojový kód webu</a></li>
+                        <li><a href="https://github.com">Nový web</a></li>
                     </ul>
                     <ul>
                         <li><b>Spojení se mnou</b></li>
@@ -198,7 +198,7 @@
                 <ul>
                     <li>&copy; Lukáš Pánek 2017</li>
                     <li>Vytvořeno s <i class="fa fa-heart" style="color: #ef4747;" aria-hidden="true"></i> pod licencí <a href="http://creativecommons.org/licenses/by-nd/4.0/">Creative Commons BY-ND</a>.</li>
-                    <li><a href="https://github.com/Liturkey/MainWebsite">GitHub</a></li>
+                    <li>GitHub</li>
                 </ul>
             </div>
         </div>
