Updatnuti social linku

--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
                     <li> <a href="https://github.com/liturkey"><i class="fa fa-github-alt" data-toggle="tooltip" data-placement="top" title="Github"></i></a></li>
                     <li> <a href="https://soundcloud.com/Liturkey"><i class="fa fa-soundcloud" data-toggle="tooltip" data-placement="top" title="SoundCloud"></i></a></li>
                     <li> <a href="https://twitch.tv/liturkey"><i class="fa fa-twitch" data-toggle="tooltip" data-placement="top" title="Twitch"></i></a></li>
-                    <li><a href="https://instagram.com/liturkey"><i class="fa fa-instagram" data-toggle="tooltip" data-placement="top" title="Instagram"></i></a></li>
-                    <li> <a href="https://twitter.com/TenLiturkey"><i class="fa fa-twitter" data-toggle="tooltip" data-placement="top" title="Twitter"></i></a></li>
+                    <li><a href="https://instagram.com/lukpanek"><i class="fa fa-instagram" data-toggle="tooltip" data-placement="top" title="Instagram"></i></a></li>
+                    <li> <a href="https://twitter.com/lukpanek"><i class="fa fa-twitter" data-toggle="tooltip" data-placement="top" title="Twitter"></i></a></li>
                     <li> <a href="https://youtube.com/lukaspanek5"><i class="fa fa-youtube-play" data-toggle="tooltip" data-placement="top" title="YouTube"></i></a></li>
                     <li> <a href="https://www.reddit.com/user/Liturkey"><i class="fa fa-reddit" data-toggle="tooltip" data-placement="top" title="Reddit"></i></a></li>
                     <li> <a href="http://steamcommunity.com/id/Liturkey/"><i class="fa fa-steam" data-toggle="tooltip" data-placement="top" title="Steam"></i></a></li> 
@@ -177,8 +177,8 @@
                         <li><b>Spojení se mnou</b></li>
                         <li><a href="https://facebook.com/Liturkey">Discord</a></li>
                         <li><a href="https://facebook.com/Liturkey">Facebook</a></li>
-                        <li><a href="https://twitter.com/TenLiturkey">Twitter</a></li>
-                        <li><a href="https://instagram.com/liturkey">Instagram</a></li>
+                        <li><a href="https://twitter.com/lukpanek">Twitter</a></li>
+                        <li><a href="https://instagram.com/lukpanek">Instagram</a></li>
                         <li><a href="mailto:lukaspanek5@gmail.com">E-mail</a></li>
                     </ul>
                     <ul>
