Discord odkaz, směruje na Discord

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                     </ul>
                     <ul>
                         <li><b>Spojení se mnou</b></li>
-                        <li><a href="https://facebook.com/Liturkey">Discord</a></li>
+                        <li><a href="https://discord.com/users/151332840577957889">Discord</a></li>
                         <li><a href="https://facebook.com/Liturkey">Facebook</a></li>
                         <li><a href="https://twitter.com/lukpanek">Twitter</a></li>
                         <li><a href="https://instagram.com/lukpanek">Instagram</a></li>
